# muttr_smtp_server

./: Cargo.toml
config/: base.yaml  local.yaml
src/: config.rs  lib.rs  main.rs  smtp_server.rs  startup.rs
src/domain/: mailer.rs
src/handlers/: send_confirmation_email.rs
src/utils/: telemetry.rs
tests/: health_check.rs  main.rs  utils.rs
tests/api/: health_check.rs
tests/utils/: app.rs  client.rs  mod.rs
