[package]
name = "muttr_smtp_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "muttr_smtp_server"

[dependencies]
actix-web = "4.4.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "full"] }
serde = { version = "1", features = ["derive"] }
config = "0.13.3"
chrono = "0.4.31"
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "9.1.0"
serde_json = "1.0.107"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.4"
lettre = { version = "0.10.0-beta.2", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "hostname", "r2d2", "builder"] }
futures = "0.3.28"
futures-timer = "3.0.2"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7.8"
unicode-segmentation = "1.10.1"
regex = "1.10.2"
claim = "0.5.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
reqwest = "0.11.22"
once_cell = "1"
fake = "~2.3"
